add custom roles system

--- a/src/uLearn.Web/Views/Account/List.cshtml
+++ b/src/uLearn.Web/Views/Account/List.cshtml
@@ -1,14 +1,21 @@
-﻿@model List<ApplicationUser>
+﻿@model UserListModel
 
 @{
 	ViewBag.Title = "Admin Users";
 }
+
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "AntiForgeryTokenContainer" }))
+{
+	@Html.AntiForgeryToken()
+}
+
 <div class="container">
 	<h2>Роли пользователей</h2>
 
-	<p><a class="label label-danger" href="@Url.Action("List", new{role=LmsRoles.Admin})">admin</a> может видеть служебную информацию и управлять ролями других пользователей.</p>
-	<p><a class="label label-info" href="@Url.Action("List", new{role=LmsRoles.Instructor})">instructor</a> может видеть статистику по успеваемости на разных слайдах, задачах, тестах. Читать заданные вопросы.</p>
-	<p><a class="label label-success" href="@Url.Action("List", new{role=LmsRoles.Tester})">tester</a> может видеть ещё не опубликованные для всех материалы.</p>
+	<p><a class="label label-danger" href="@Url.Action("List", new { role = LmsRoles.Admin })">admin</a> может всё.</p>
+	<p><a class="label label-warning" href="@Url.Action("List", new { courseRole = CourseRoles.Admin })">Admin</a> может видеть служебную информацию и управлять ролями других пользователей.</p>
+	<p><a class="label label-info" href="@Url.Action("List", new { courseRole = CourseRoles.Instructor })">Instructor</a> может видеть статистику по успеваемости на разных слайдах, задачах, тестах. Читать заданные вопросы.</p>
+	<p><a class="label label-success" href="@Url.Action("List", new { courseRole = CourseRoles.Tester })">Tester</a> может видеть ещё не опубликованные для всех материалы.</p>
 	<p><a class="label label-default" href="@Url.Action("List")">обычный пользователь</a> может видеть только опубликованные материалы.</p>
 
 	@using (Html.BeginForm("List", "Account", FormMethod.Get, new { @class = "form-inline" }))
@@ -22,42 +29,98 @@
 			<th>Имя</th>
 			<th>Группа</th>
 			<th>Роли</th>
-			<th>Удаление</th>
+			@if (User.IsSystemAdministrator())
+			{
+				<th>Удаление</th>
+			}
 		</tr>
-		@foreach (var user in Model)
+		@foreach (var user in Model.Users)
 		{
-			<tr data-userid="@user.Id">
+			<tr data-userid="@user.UserId">
 				<td>@Html.ActionLink(user.UserName, "Info", new { userName = user.UserName })</td>
 				<td>@user.GroupName</td>
 				<td>
-					<div class="btn-group">
+					<div class="btn-group role-btn-group">
 						@RoleButton(user, LmsRoles.Admin, "danger")
-						@RoleButton(user, LmsRoles.Instructor, "info")
-						@RoleButton(user, LmsRoles.Tester, "success")
+						@RoleButton(user, CourseRoles.Admin, "warning")
+						@RoleButton(user, CourseRoles.Instructor, "info")
+						@RoleButton(user, CourseRoles.Tester, "success")
 					</div>
 				</td>
-				<td>
-					@using (Html.BeginForm("DeleteUser", "Account", new { userId = user.Id }, FormMethod.Post))
-					{
-						@Html.AntiForgeryToken()
-						<button type="submit" class="btn btn-sm btn-danger">Удалить пользователя</button>
-					}
-				</td>
+				@if (User.IsSystemAdministrator())
+				{
+					<td>
+						@using (Html.BeginForm("DeleteUser", "Account", new { userId = user.UserId }, FormMethod.Post))
+						{
+							@Html.AntiForgeryToken()
+							<button type="submit" class="btn btn-sm btn-danger">Удалить пользователя</button>
+						}
+					</td>
+				}
 			</tr>
 		}
 	</table>
 </div>
 
-@helper RoleButton(ApplicationUser user, string role, string cssClass)
+@helper RoleButton(UserModel user, string role, string cssClass)
 {
-	<a href="@Url.Action("ToggleRole", new{userId=user.Id, role})"
-	   class="btn btn-sm btn-@RoleButtonClass(user, role, cssClass)">
-		@role
-	</a>
+	<div class="btn-group">
+		<button type="button"
+				class="btn btn-sm btn-default btn-@RoleButtonClass(user, role, cssClass)"
+				data-css-class="btn-@cssClass"
+				data-toggle-url="@Url.Action("ToggleSystemAdministratorRole", new { userId = user.UserId })"
+				onclick=" ToggleRole(event, this) ">
+			@role
+		</button>
+	</div>
 }
 
-@helper RoleButtonClass(ApplicationUser user, string role, string cssClass)
+@helper RoleButton(UserModel user, CourseRoles role, string cssClass)
 {
-	@(user.Roles.Any(r => r.Role.Name == role) ? cssClass : "default")
+	<div class="btn-group">
+		<button type="button"
+				class="btn btn-sm  btn-default dropdown-toggle btn-@RoleButtonClass(user, role, cssClass)"
+				data-css-class="btn-@cssClass"
+				data-toggle="dropdown"
+				aria-haspopup="true"
+				aria-expanded="false">
+			@role <span class="caret"></span>
+		</button>
+		<ul class="dropdown-menu">
+			@foreach (var courseId in Model.Courses)
+			{
+				<li data-css-class="li-@cssClass"
+					class="li-@RoleLiClass(user, role, courseId, cssClass)"
+					data-toggle-url="@Url.Action("ToggleRole", new { userId = user.UserId, courseId, role })"
+					onclick="ToggleRole(event, this)">
+					<a>@courseId</a>
+				</li>
+			}
+		</ul>
+	</div>
 }
 
+@helper RoleButtonClass(UserModel user, CourseRoles role, string cssClass)
+{
+	@(GetCourses(user, role).Any() ? cssClass : "default")
+}
+
+@helper RoleLiClass(UserModel user, CourseRoles role, string courseId, string cssClass)
+{
+	@(GetCourses(user, role).Contains(courseId) ? cssClass : "default")
+}
+
+@helper RoleButtonClass(UserModel user, string role, string cssClass)
+{
+	@(user.Roles.Contains(role) ? cssClass : "default")
+}
+
+@functions
+{
+	private static List<string> GetCourses(UserModel user, CourseRoles role)
+	{
+		if (user.Courses == null || !user.Courses.ContainsKey(role))
+			return new List<string>();
+		return user.Courses[role];
+	}
+}
