--- a/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
@@ -8,7 +8,7 @@
 
 <div class="side-bar navbar-collapse collapse navbar-nav container">
 
-	@if (User.HasAccessFor(Model.Course.Id, CourseRoles.Admin))
+	@if (User.HasAccessFor(Model.Course.Id, CourseRoles.CourseAdmin))
 	{
 		var currentUrl = Request.Url;
 		if (currentUrl != null)
