--- a/src/uLearn.Web/Views/Unit/CourseList.cshtml
+++ b/src/uLearn.Web/Views/Unit/CourseList.cshtml
@@ -12,14 +12,14 @@
 		}
 	</ul>
 
-	<h3>Загрузить новый пакет</h3>
+	<h3>Загрузить новый курс</h3>
 	@using (Html.BeginForm("UploadCourse", "Unit", FormMethod.Post, new { enctype = "multipart/form-data" }))
 	{
 		<input type="file" data-filename-placement="inside" class="btn" name="file" />
 		<input type="submit" class="btn btn-danger" value="OK" />
 	}
 
-	<h2>Пакеты курсов</h2>
+	<h2>Курсы</h2>
 	<table class="table table-condensed">
 		@foreach (var course in Model.Courses)
 		{
