--- a/src/uLearn.Web/Views/Unit/ManageMenu.cshtml
+++ b/src/uLearn.Web/Views/Unit/ManageMenu.cshtml
@@ -5,5 +5,6 @@
 		<li class="units-list-item full-width units-list-item-text course-name">@Model.Title</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Управление юнитами", "List", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Управление пакетами", "Packages", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
+		<li class="units-list-item full-width">@Html.ActionLink("Управление доступом", "Users", new { Model.CourseId, onlyPrivileged = true }, new { @class = "units-list-item-text" })</li>
 	</ul>
 </div>
