create new course from help course, if it is possible

--- a/src/uLearn.Web/Views/Unit/CourseList.cshtml
+++ b/src/uLearn.Web/Views/Unit/CourseList.cshtml
@@ -19,7 +19,7 @@
 		{
 			@Html.AntiForgeryToken()
 			<input type="text" class="form-control" name="courseId" />
-			<input type="submit" class="btn btn-danger" value="OK" />
+			<input type="submit" class="btn btn-danger" value="Создать" />
 		}
 	}
 </div>
