--- a/src/uLearn.Web/Views/Unit/Users.cshtml
+++ b/src/uLearn.Web/Views/Unit/Users.cshtml
@@ -20,5 +20,5 @@
 		<button class="btn btn-default" class="button" type="submit">Фильтровать по имени</button>
 	}
 
-	@Html.Action("ListPartial", "Account", Model)
+	@Html.Action("UsersPartial", Model)
 </div>
