--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -44,7 +44,7 @@
 					<small>У вас остал@(remains == 1 ? "а" : "о")сь @remains из @(Model.MaxDropCount + 1) попыток</small>
 				}
 			}
-			else if (User.HasAccessFor(Model.CourseId, CourseRoles.Tester))
+			else if (User.HasAccessFor(Model.CourseId, CourseRole.Tester))
 			{
 				using (Html.BeginForm("ClearAnswers", "Quiz"))
 				{
@@ -56,7 +56,7 @@
 			}
 		</div>
 	}
-	if (User.HasAccessFor(Model.CourseId, CourseRoles.Instructor))
+	if (User.HasAccessFor(Model.CourseId, CourseRole.Instructor))
 	{
 		<h2>Статистика ответов</h2>
 		@SwitchablePanel.TimePanel("quiz-statistic",
