--- a/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-	@if (User.HasAccess(CourseRoles.Instructor))
+	@if (User.HasAccess(CourseRole.Instructor))
 	{
 		@SlideHtml.CodeTextArea(@"using System;
 
