--- a/src/uLearn.Web/Views/Unit/Users.cshtml
+++ b/src/uLearn.Web/Views/Unit/Users.cshtml
@@ -8,9 +8,9 @@
 @Html.Action("ManageMenu");
 
 <div class="container">
-	<p><a class="label label-warning" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRoles.CourseAdmin })">@CourseRoles.CourseAdmin</a> может видеть служебную информацию и управлять ролями других пользователей.</p>
-	<p><a class="label label-info" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRoles.Instructor })">@CourseRoles.Instructor</a> может видеть статистику по успеваемости на разных слайдах, задачах, тестах. Читать заданные вопросы.</p>
-	<p><a class="label label-success" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRoles.Tester })">@CourseRoles.Tester</a> может видеть ещё не опубликованные для всех материалы.</p>
+	<p><a class="label label-warning" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRole.CourseAdmin })">@CourseRole.CourseAdmin</a> может видеть служебную информацию и управлять ролями других пользователей.</p>
+	<p><a class="label label-info" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRole.Instructor })">@CourseRole.Instructor</a> может видеть статистику по успеваемости на разных слайдах, задачах, тестах. Читать заданные вопросы.</p>
+	<p><a class="label label-success" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRole.Tester })">@CourseRole.Tester</a> может видеть ещё не опубликованные для всех материалы.</p>
 	<p><a class="label label-default" href="@Url.Action("Users", new { Model.CourseId })">обычный пользователь</a> может видеть только опубликованные материалы.</p>
 
 	@using (Html.BeginForm("Users", "Unit", FormMethod.Get, new { @class = "form-inline" }))
