Add first version of slide comments

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -447,3 +447,13 @@ li.li-info {
 li.li-success {
 	background: #dbf0db;
 }
+
+/* Comments */
+.comments .comment {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.comments .comment .comment-replies {
+    margin-left: 20px;
+}
