--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -53,6 +53,8 @@
 				@Html.Partial("_LoginForContinue")
 			}
 			@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = false })
+
+			@Html.Action("SlideComments", "Comments", new { courseId = Model.CourseId, slideId=  Model.Slide.Id})
 		</div>
 	</div>
 </div>
