--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -497,8 +497,12 @@ li.li-success {
     font-size: 10pt;
 }
 
-.comments .comment .comment__likes-count:hover .glyphicon {
-    color: #c00;
+.comments .comment .comment__likes-count.is-liked .glyphicon {
+	color: #c00;
+}
+
+.comments .comment .comment__likes-count:not(.is-liked):hover .glyphicon {
+    color: #700;
 }
 
 .comments .comment:not(.is-reply) .comment__text {
@@ -509,24 +513,24 @@ li.li-success {
     width: 500px;
 }
 
-.comments .reply-form [name=comment-text] {
+.comments .reply-form [name=commentText] {
     height: 24px;
     margin-left: 7px;
     padding: 1px 5px;
     outline: none;
 }
 
-.comments .reply-form textarea[name=comment-text] {
+.comments .reply-form textarea[name=commentText] {
     height: 60px;
     padding-left: 6px;
     padding-top: 1px;
 }
 
-.comments .reply-form:not(.is-reply) [name=comment-text] {
+.comments .reply-form:not(.is-reply) [name=commentText] {
     min-width: 608px;
 }
 
-.comments .reply-form.is-reply [name=comment-text] {
+.comments .reply-form.is-reply [name=commentText] {
     min-width: 540px;
 }
 
