--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -450,7 +450,6 @@ li.li-success {
 
 /* Comments */
 .comments .comment {
-    width: 638px;
 }
 
 .comments .comment.is-reply,
@@ -472,16 +471,27 @@ li.li-success {
     display: inline-block;
 }
 
+.comments .comment .comment__footer .comment__inline-reply {
+	display: none;
+}
+
+.comments .comment:hover .comment__footer .comment__inline-reply {
+	display: inline-block;
+}
+
 .comments .comment .comment__author-name {
     font-size: 10pt;
     font-weight: bold;
     color: #060;
 }
 
+.comments .comment .comment__footer > :not(:first-child) {
+	padding-left: 5px;
+}
+
 .comments .comment .comment__publish-time {
     font-size: 10pt;
     color: #bbb;
-    padding-left: 5px;
 }
 
 .comments .comment .comment__likes-count {
@@ -509,10 +519,6 @@ li.li-success {
     width: 570px;
 }
 
-.comments .comment.is-reply .comment__text {
-    width: 500px;
-}
-
 .comments .reply-form [name=commentText] {
     height: 24px;
     margin-left: 7px;
@@ -527,11 +533,11 @@ li.li-success {
 }
 
 .comments .reply-form:not(.is-reply) [name=commentText] {
-    min-width: 608px;
+    min-width: 828px;
 }
 
 .comments .reply-form.is-reply [name=commentText] {
-    min-width: 540px;
+    min-width: 760px;
 }
 
 .comments .reply-form .reply-form__send-button {
